New srn print message

--- a/src/PrintMessage.ipynb
+++ b/src/PrintMessage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "33e4238b-6c5e-42f7-b4ba-cf7ab0bcc873",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "Hello World!\n"
      ]
     }
    ],
    "source": [
-    "print('Hello World')"
+    "print('Hello World!')"
    ]
   },
   {
@@ -29,7 +29,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:light"
+   "formats": "ipynb,py:light"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
