--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -10,53 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "04ecfcba-b3f8-4c29-af1f-bdd406c2de4c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "5+5"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "dc897728-fa8d-4c28-a777-2e1c80ae46f1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "10*2"
+    "vaina =np.arange(0,10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "7091a1a2-fd6c-4d8d-a921-2fb8a0ed5c41",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vaina.mean())"
+   ]
   }
  ],
  "metadata": {
